# tambur-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: e2e.rs  fec.rs
src/: config.rs  datagram.rs  error.rs  feedback.rs  frame.rs  lib.rs  packetization.rs  predictor.rs  word_size.rs
src/codec/: decoder.rs  encoder.rs  mod.rs  receive_frame.rs  seq_dedup.rs  session.rs  window.rs
src/fec/: bench_e2e.rs  bench_harness.rs  block_code.rs  error.rs  header.rs  mod.rs  payload_matrix.rs  puncture.rs  test_util.rs
src/fec/gf/: engine.rs  gf32.rs  gf8.rs  mod.rs  table.rs
src/fec/gf/backend/: autodetect.rs  mod.rs  neon.rs  scalar.rs  x86.rs  x86_gf32_split4.rs
src/fec/matrix/: cauchy.rs  generator.rs  info.rs  jerasure.rs  mod.rs
src/fec/streaming/: flow_decode.rs  mod.rs  recovery.rs  reorder.rs  stripes.rs  test_common.rs  theoretical.rs
src/loss/: computer.rs  info.rs  mod.rs  test_common.rs
src/loss/metrics/: burst.rs  gap.rs  mod.rs  multi_frame.rs
src/util/: mod.rs  serialization.rs
tests/: e2e.rs
